--- a/qClient/add_friend.ui
+++ b/qClient/add_friend.ui
@@ -35,47 +35,17 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(7,193,96);
+    <string notr="true">background-color: rgb(0, 170, 255);
+
 </string>
    </property>
-   <widget class="QPushButton" name="logo">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>20</y>
-      <width>50</width>
-      <height>50</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="minimumSize">
-     <size>
-      <width>50</width>
-      <height>50</height>
-     </size>
-    </property>
-    <property name="maximumSize">
-     <size>
-      <width>50</width>
-      <height>50</height>
-     </size>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>20</y>
-      <width>231</width>
-      <height>71</height>
+      <x>130</x>
+      <y>10</y>
+      <width>281</width>
+      <height>101</height>
      </rect>
     </property>
     <property name="styleSheet">
