--- a/qClient/groupregster.ui
+++ b/qClient/groupregster.ui
@@ -94,42 +94,16 @@ border:none;</string>
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(7,193,96);
+    <string notr="true">background-color: rgb(0, 170, 255);
 </string>
    </property>
-   <widget class="QPushButton" name="logo">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>61</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
-   <widget class="QToolButton" name="toolButton">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>20</y>
-      <width>47</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>...</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>170</x>
+      <x>130</x>
       <y>20</y>
-      <width>241</width>
-      <height>51</height>
+      <width>261</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
