--- a/qClient/signin_windows.ui
+++ b/qClient/signin_windows.ui
@@ -41,8 +41,7 @@ QLineEdit{
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(7,193,96);
-</string>
+    <string notr="true">background-color: rgb(0, 170, 255);</string>
    </property>
    <widget class="QWidget" name="widget_3" native="true">
     <property name="geometry">
@@ -74,26 +73,13 @@ QLineEdit{
      </widget>
     </widget>
    </widget>
-   <widget class="QPushButton" name="logo">
-    <property name="geometry">
-     <rect>
-      <x>150</x>
-      <y>40</y>
-      <width>101</width>
-      <height>81</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>300</x>
+      <x>280</x>
       <y>40</y>
-      <width>271</width>
-      <height>81</height>
+      <width>221</width>
+      <height>91</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -101,6 +87,19 @@ QLineEdit{
     </property>
     <property name="text">
      <string>IceBreaker</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="logo">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>40</y>
+      <width>111</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
     </property>
    </widget>
   </widget>
