--- a/qClient/changecolor_window.ui
+++ b/qClient/changecolor_window.ui
@@ -146,7 +146,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(94, 97, 255);</string>
+       <string notr="true">background-color: rgb(233,204,251);</string>
       </property>
       <property name="text">
        <string/>
@@ -267,7 +267,7 @@
        </size>
       </property>
       <property name="styleSheet">
-       <string notr="true">background-color: rgb(247, 255, 90);</string>
+       <string notr="true">background-color: rgb(255,164,27);</string>
       </property>
       <property name="text">
        <string/>
