--- a/qClient/friend_windows.ui
+++ b/qClient/friend_windows.ui
@@ -17,29 +17,10 @@
    <string notr="true"/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QPushButton" name="changeHead">
-     <property name="minimumSize">
-      <size>
-       <width>80</width>
-       <height>80</height>
-      </size>
-     </property>
-     <property name="maximumSize">
-      <size>
-       <width>80</width>
-       <height>80</height>
-      </size>
-     </property>
-     <property name="text">
-      <string>PushButton</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="0" colspan="2">
+   <item row="1" column="3">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -99,6 +80,9 @@
        </property>
        <item row="0" column="0">
         <widget class="QListWidget" name="listWidgetGroup">
+         <property name="enabled">
+          <bool>true</bool>
+         </property>
          <property name="font">
           <font>
            <pointsize>14</pointsize>
@@ -115,7 +99,26 @@
      </widget>
     </widget>
    </item>
-   <item row="0" column="1">
+   <item row="0" column="3">
+    <widget class="QPushButton" name="changeHead">
+     <property name="minimumSize">
+      <size>
+       <width>80</width>
+       <height>80</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>80</width>
+       <height>80</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>PushButton</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
     <widget class="QLabel" name="labelID">
      <property name="styleSheet">
       <string notr="true">background:rgba(225,225,225,0.5)</string>
@@ -126,9 +129,6 @@
     </widget>
    </item>
   </layout>
-  <zorder>tabWidget</zorder>
-  <zorder>changeHead</zorder>
-  <zorder>labelID</zorder>
  </widget>
  <resources/>
  <connections/>
