--- a/qClient/expression.ui
+++ b/qClient/expression.ui
@@ -197,14 +197,15 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>70</x>
       <y>10</y>
-      <width>221</width>
+      <width>261</width>
       <height>51</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 75 italic 36pt &quot;Adobe Arabic&quot;;</string>
+     <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
+</string>
     </property>
     <property name="text">
      <string>IceBreaker</string>
