--- a/qClient/regster_windows.ui
+++ b/qClient/regster_windows.ui
@@ -128,15 +128,15 @@ border:none;</string>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>180</x>
       <y>30</y>
-      <width>231</width>
+      <width>281</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">
-font: 75 italic 36pt &quot;Adobe Arabic&quot;;</string>
+     <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
+</string>
     </property>
     <property name="text">
      <string>IceBreaker</string>
