--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -27,5 +27,6 @@
         <file>img/prtsc_draw.svg</file>
         <file>img/file_pic.png</file>
         <file>img/logo.png</file>
+        <file>img/title1.png</file>
     </qresource>
 </RCC>
