--- a/qClient/regster_windows.ui
+++ b/qClient/regster_windows.ui
@@ -108,19 +108,20 @@ border:none;</string>
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 170, 255);
-background-image: url(:/new/prefix1/img/title1.png);
-
-</string>
+    <string notr="true">#widget{background-image: url(:/new/prefix1/img/title1.png);}</string>
    </property>
    <widget class="QPushButton" name="logo">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>20</y>
+      <x>30</x>
+      <y>30</y>
       <width>81</width>
       <height>71</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;
+</string>
     </property>
     <property name="text">
      <string/>
@@ -129,14 +130,15 @@ background-image: url(:/new/prefix1/img/title1.png);
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>0</y>
+      <x>120</x>
+      <y>40</y>
       <width>281</width>
       <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
+background-color:transparent;
 </string>
     </property>
     <property name="text">
