--- a/qClient/signin_windows.ui
+++ b/qClient/signin_windows.ui
@@ -40,6 +40,9 @@ QLineEdit{
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
+   <property name="contextMenuPolicy">
+    <enum>Qt::PreventContextMenu</enum>
+   </property>
    <property name="styleSheet">
     <string notr="true">background-color: rgb(0, 170, 255);</string>
    </property>
@@ -84,6 +87,7 @@ QLineEdit{
     </property>
     <property name="styleSheet">
      <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
+background-color:transparent;
 </string>
     </property>
     <property name="text">
