--- a/qClient/signin_windows.ui
+++ b/qClient/signin_windows.ui
@@ -28,7 +28,7 @@ QLineEdit{
   <widget class="QWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
-     <x>0</x>
+     <x>-10</x>
      <y>0</y>
      <width>751</width>
      <height>171</height>
@@ -44,7 +44,7 @@ QLineEdit{
     <enum>Qt::PreventContextMenu</enum>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 170, 255);</string>
+    <string notr="true">background-image: url(:/new/prefix1/img/titlt2.png)</string>
    </property>
    <widget class="QWidget" name="widget_3" native="true">
     <property name="geometry">
@@ -79,7 +79,7 @@ QLineEdit{
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>260</x>
       <y>40</y>
       <width>291</width>
       <height>91</height>
@@ -87,7 +87,7 @@ QLineEdit{
     </property>
     <property name="styleSheet">
      <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
-background-color:transparent;
+background:transparent;
 </string>
     </property>
     <property name="text">
@@ -98,10 +98,13 @@ background-color:transparent;
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>40</y>
+      <y>50</y>
       <width>111</width>
       <height>81</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color:transparent;</string>
     </property>
     <property name="text">
      <string/>
