--- a/qClient/add_friend.ui
+++ b/qClient/add_friend.ui
@@ -35,15 +35,14 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 170, 255);
-
+    <string notr="true">#widget{background-image: url(:/new/prefix1/img/title1.png);}
 </string>
    </property>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>10</y>
+      <x>20</x>
+      <y>20</y>
       <width>281</width>
       <height>101</height>
      </rect>
