--- a/qClient/groupregster.ui
+++ b/qClient/groupregster.ui
@@ -64,13 +64,12 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 170, 255);
-</string>
+    <string notr="true">#widget{background-image: url(:/new/prefix1/img/title3.png);}</string>
    </property>
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>10</x>
       <y>20</y>
       <width>261</width>
       <height>61</height>
