--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -30,5 +30,6 @@
         <file>img/title1.png</file>
         <file>img/title.png</file>
         <file>img/titlt2.png</file>
+        <file>img/title3.png</file>
     </qresource>
 </RCC>
