x8(UI change color picture)

--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -31,5 +31,6 @@
         <file>img/title.png</file>
         <file>img/titlt2.png</file>
         <file>img/title3.png</file>
+        <file>img/title4.png</file>
     </qresource>
 </RCC>
