--- a/qClient/changecolor_window.ui
+++ b/qClient/changecolor_window.ui
@@ -44,20 +44,21 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color:rgb(0, 170, 255)</string>
+    <string notr="true">#widget{background-image:url(:/new/prefix1/img/title4.png);}
+</string>
    </property>
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>20</y>
+      <x>30</x>
+      <y>10</y>
       <width>371</width>
       <height>71</height>
      </rect>
     </property>
     <property name="styleSheet">
      <string notr="true">font: 36pt &quot;Kunstler Script&quot;;
-</string>
+background:transparent</string>
     </property>
     <property name="text">
      <string>IceBreaker</string>
