--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -32,5 +32,6 @@
         <file>img/titlt2.png</file>
         <file>img/title3.png</file>
         <file>img/title4.png</file>
+        <file>img/head.1.jpg</file>
     </qresource>
 </RCC>
