--- a/qClient/cell_main.ui
+++ b/qClient/cell_main.ui
@@ -98,6 +98,46 @@ background-color: rgb(227,224,223);
          <property name="spacing">
           <number>0</number>
          </property>
+         <item row="0" column="5">
+          <widget class="QPushButton" name="shutdown">
+           <property name="minimumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>30</width>
+             <height>30</height>
+            </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true">QPushButton#shutdown{border:none;}
+QPushButton#shutdown:hover{
+background-color:rgb(255, 0, 46);
+border:none;
+}
+</string>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="4">
+          <spacer name="verticalSpacer">
+           <property name="orientation">
+            <enum>Qt::Vertical</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>20</width>
+             <height>40</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
          <item row="0" column="2">
           <widget class="QPushButton" name="options">
            <property name="minimumSize">
@@ -162,42 +202,31 @@ border:none;
            </property>
           </widget>
          </item>
-         <item row="0" column="5">
-          <widget class="QPushButton" name="shutdown">
+         <item row="0" column="0" rowspan="2">
+          <widget class="QLabel" name="name">
            <property name="minimumSize">
             <size>
-             <width>30</width>
-             <height>30</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>30</width>
-             <height>30</height>
+             <width>400</width>
+             <height>0</height>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true">QPushButton#shutdown{border:none;}
-QPushButton#shutdown:hover{
-background-color:rgb(255, 0, 46);
-border:none;
-}
-</string>
+            <string notr="true">font: 24pt &quot;Eras Bold ITC&quot;;</string>
            </property>
            <property name="text">
-            <string/>
+            <string>IceBreaker</string>
            </property>
           </widget>
          </item>
-         <item row="1" column="4">
-          <spacer name="verticalSpacer">
+         <item row="0" column="1">
+          <spacer name="horizontalSpacer_4">
            <property name="orientation">
-            <enum>Qt::Vertical</enum>
+            <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
-             <width>20</width>
-             <height>40</height>
+             <width>437</width>
+             <height>20</height>
             </size>
            </property>
           </spacer>
@@ -234,40 +263,8 @@ border:none;
            </property>
           </widget>
          </item>
-         <item row="0" column="1">
-          <spacer name="horizontalSpacer_4">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>437</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item row="0" column="0" rowspan="2">
-          <widget class="QLabel" name="name">
-           <property name="minimumSize">
-            <size>
-             <width>400</width>
-             <height>0</height>
-            </size>
-           </property>
-           <property name="styleSheet">
-            <string notr="true">font: 24pt &quot;Eras Bold ITC&quot;;</string>
-           </property>
-           <property name="text">
-            <string>IceBreaker</string>
-           </property>
-          </widget>
-         </item>
         </layout>
        </widget>
-      </item>
-      <item row="1" column="2">
-       <widget class="QWidget" name="chat" native="true"/>
       </item>
       <item row="0" column="1" rowspan="2">
        <widget class="QWidget" name="friend_2" native="true">
@@ -283,127 +280,108 @@ border:none;
           <height>16777215</height>
          </size>
         </property>
+        <zorder>side_bar</zorder>
        </widget>
+      </item>
+      <item row="1" column="2">
+       <widget class="QWidget" name="chat" native="true"/>
       </item>
       <item row="0" column="0" rowspan="2">
        <widget class="QWidget" name="side_bar" native="true">
         <property name="minimumSize">
          <size>
-          <width>55</width>
+          <width>70</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>55</width>
+          <width>70</width>
           <height>16777215</height>
          </size>
         </property>
         <property name="styleSheet">
          <string notr="true">background-color: rgb(46,46,46);</string>
         </property>
-        <widget class="QWidget" name="verticalLayoutWidget">
+        <widget class="QLabel" name="label">
          <property name="geometry">
           <rect>
-           <x>0</x>
-           <y>0</y>
-           <width>61</width>
-           <height>701</height>
+           <x>10</x>
+           <y>30</y>
+           <width>51</width>
+           <height>51</height>
           </rect>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
-           <spacer name="verticalSpacer_4">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="add">
-            <property name="minimumSize">
-             <size>
-              <width>55</width>
-              <height>55</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>55</width>
-              <height>55</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton#add{border:none;}
+         <property name="styleSheet">
+          <string notr="true">background-image: url(:/new/prefix1/img/head.1.jpg);</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="add">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>220</y>
+           <width>55</width>
+           <height>55</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>55</width>
+           <height>55</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>55</width>
+           <height>55</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton#add{border:none;}
 QPushButton#add:hover{
 border:none;
 background-color: rgb(79, 79, 79);
 }</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer_2">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item>
-           <widget class="QPushButton" name="change_color">
-            <property name="minimumSize">
-             <size>
-              <width>55</width>
-              <height>55</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>55</width>
-              <height>55</height>
-             </size>
-            </property>
-            <property name="styleSheet">
-             <string notr="true">QPushButton#change_color{border:none;}
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+        <widget class="QPushButton" name="change_color">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>470</y>
+           <width>55</width>
+           <height>55</height>
+          </rect>
+         </property>
+         <property name="minimumSize">
+          <size>
+           <width>55</width>
+           <height>55</height>
+          </size>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>55</width>
+           <height>55</height>
+          </size>
+         </property>
+         <property name="styleSheet">
+          <string notr="true">QPushButton#change_color{border:none;}
 QPushButton#change_color:hover{
 border:none;
 background-color: rgb(79, 79, 79);
 }</string>
-            </property>
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="verticalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>40</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
         </widget>
        </widget>
       </item>
