--- a/qClient/expression.ui
+++ b/qClient/expression.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>Emoji</string>
   </property>
   <widget class="QWidget" name="gridLayoutWidget">
    <property name="geometry">
@@ -191,13 +191,13 @@
     </sizepolicy>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(0, 170, 255);
+    <string notr="true">#widget{background-image: url(:/new/prefix1/img/title5.png);}
 </string>
    </property>
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>10</x>
       <y>10</y>
       <width>261</width>
       <height>51</height>
