--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -33,5 +33,6 @@
         <file>img/title3.png</file>
         <file>img/title4.png</file>
         <file>img/head.1.jpg</file>
+        <file>img/title5.png</file>
     </qresource>
 </RCC>
