--- a/qClient/img.qrc
+++ b/qClient/img.qrc
@@ -34,5 +34,7 @@
         <file>img/title4.png</file>
         <file>img/head.1.jpg</file>
         <file>img/title5.png</file>
+        <file>img/exp7.png</file>
+        <file>img/exp8.png</file>
     </qresource>
 </RCC>
