x12.修改安全级别，防SQL注入
试了一下sql注入，改成sha256加密，到时候吹嘘我们解决了一些sql注入的漏洞

--- a/IBClient/signin_windows.ui
+++ b/IBClient/signin_windows.ui
@@ -298,7 +298,7 @@ border-radiux: 505px</string>
           <bool>true</bool>
          </property>
          <property name="echoMode">
-          <enum>QLineEdit::Password</enum>
+          <enum>QLineEdit::Normal</enum>
          </property>
          <property name="placeholderText">
           <string>密码</string>
