--- a/IBClient/friend_windows.ui
+++ b/IBClient/friend_windows.ui
@@ -17,6 +17,16 @@
    <string notr="true"/>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="3">
+    <widget class="QLabel" name="labelID">
+     <property name="styleSheet">
+      <string notr="true">background:rgba(225,225,225,0.5)</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+   </item>
    <item row="1" column="0" colspan="3">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
@@ -26,87 +36,87 @@
       <attribute name="title">
        <string>朋友</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_4">
-       <property name="leftMargin">
-        <number>0</number>
+      <widget class="QListWidget" name="listWidgetFriend">
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>321</width>
+         <height>753</height>
+        </rect>
        </property>
-       <property name="topMargin">
-        <number>0</number>
+       <property name="font">
+        <font>
+         <pointsize>15</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
-       <property name="rightMargin">
-        <number>0</number>
+       <property name="styleSheet">
+        <string notr="true">border-image: url(:/new/prefix1/pintree.jpg);</string>
        </property>
-       <property name="bottomMargin">
-        <number>0</number>
+      </widget>
+      <widget class="QLabel" name="label_2">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>0</y>
+         <width>61</width>
+         <height>61</height>
+        </rect>
        </property>
-       <property name="spacing">
-        <number>0</number>
+       <property name="styleSheet">
+        <string notr="true">background-image: url(:/new/prefix1/img/chrismastree.svg);</string>
        </property>
-       <item row="0" column="0">
-        <widget class="QListWidget" name="listWidgetFriend">
-         <property name="font">
-          <font>
-           <pointsize>15</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">border-image: url(:/new/prefix1/pintree.jpg);</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
      <widget class="QWidget" name="tab_2">
       <attribute name="title">
        <string> 群聊</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout_3">
-       <property name="leftMargin">
-        <number>0</number>
+      <widget class="QListWidget" name="listWidgetGroup">
+       <property name="enabled">
+        <bool>true</bool>
        </property>
-       <property name="topMargin">
-        <number>0</number>
+       <property name="geometry">
+        <rect>
+         <x>0</x>
+         <y>0</y>
+         <width>401</width>
+         <height>753</height>
+        </rect>
        </property>
-       <property name="rightMargin">
-        <number>0</number>
+       <property name="font">
+        <font>
+         <pointsize>14</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
        </property>
-       <property name="bottomMargin">
-        <number>0</number>
+       <property name="styleSheet">
+        <string notr="true">border-image: url(:/new/prefix1/pintree.jpg);</string>
        </property>
-       <property name="spacing">
-        <number>0</number>
+      </widget>
+      <widget class="QLabel" name="label">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>0</y>
+         <width>61</width>
+         <height>61</height>
+        </rect>
        </property>
-       <item row="0" column="0">
-        <widget class="QListWidget" name="listWidgetGroup">
-         <property name="enabled">
-          <bool>true</bool>
-         </property>
-         <property name="font">
-          <font>
-           <pointsize>14</pointsize>
-           <weight>75</weight>
-           <bold>true</bold>
-          </font>
-         </property>
-         <property name="styleSheet">
-          <string notr="true">border-image: url(:/new/prefix1/pintree.jpg);</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
+       <property name="styleSheet">
+        <string notr="true">background-image: url(:/new/prefix1/img/group.svg);</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
      </widget>
-    </widget>
-   </item>
-   <item row="0" column="0" colspan="3">
-    <widget class="QLabel" name="labelID">
-     <property name="styleSheet">
-      <string notr="true">background:rgba(225,225,225,0.5)</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
     </widget>
    </item>
   </layout>
